syntax = "proto3";

package user_management;

service UserService {
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByUid(GetUserByUidRequest) returns (GetUserResponse);
  rpc UpdateUserRole(UpdateUserRoleRequest) returns (UpdateUserRoleResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message ValidateUserRequest {
  string firebase_token = 1;
}

message ValidateUserResponse {
  int32 isValid = 1;  // 1 = true, 0 = false
  User user = 2;
  string errorMessage = 3;
}

message CreateUserRequest {
  string firebase_token = 1;
  string email = 2;
  string nombre_completo = 3;
}

message CreateUserResponse {
  bool success = 1;
  User user = 2;
  string errorMessage = 3;
}

message GetUserByUidRequest {
  string uid = 1;
}

message GetUserResponse {
  bool found = 1;
  User user = 2;
  string errorMessage = 3;
}

message UpdateUserRoleRequest {
  string uid = 1;
  string new_role = 2;
}

message UpdateUserRoleResponse {
  bool success = 1;
  User user = 2;
  string errorMessage = 3;
}

message DeleteUserRequest {
  string uid = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string errorMessage = 2;
}

message User {
  string uid = 1;
  string email = 2;
  string rol = 3;
  string nombreCompleto = 4;
  string createdAt = 5;
  string updatedAt = 6;
}